--- a/Recipe_sharing/requirements.txt
+++ b/Recipe_sharing/requirements.txt
@@ -3,3 +3,4 @@ whitenoise==6.5.0
 django-crispy-forms==2.0.0
 django-widget-tweaks==1.4.11
 pillow==10.0.0
+gunicorn==20.1.0          # For production deployment
